some icons changed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3500,7 +3500,7 @@ hr {
   opacity: 50%;
 }
 
-.categories-word .fa-circle-chevron-down {
+.categories-word .img {
   float: right;
   margin-right: 15px;
 }
